DSSSM-428 #time 2h 38m successfully centered contact block horizontally and added translucent background behind it, but introduces bug regarding page height, possibly stemming from transition animation

--- a/css/dss_digital.css
+++ b/css/dss_digital.css
@@ -1472,6 +1472,38 @@ body.no-sidebars .islandora-large-image-content {
 	margin-right:1%;
 }
 
+/* implement styling to center contact div on pages */
+
+
+#contact {
+	
+    left: 0 !important;
+	background-color:rgba(0, 0, 0, 0.2) !important;
+    border: none;
+    border-radius: 0px;
+    box-shadow: none;
+    outline: none;
+    position: absolute;
+    width: 100%;
+    height:100%;
+}
+
+#contact > div.modal-dialog {
+	
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    position: relative;
+    background-clip: padding-box;
+    background-color: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 6px;
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    outline: medium none;
+    width: 560px;
+}
+
+
 
 
 
